<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:ignore="MergeRootFrame">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:theme="@style/PrimaryActivity.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/item_margin">

                <TextView
                    android:id="@+id/tvHeader"
                    style="@style/TextViewHeaderWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/profile" />

                <TextView
                    android:id="@+id/imvRight"
                    style="@style/TextViewMenu"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/save" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout">

        <RelativeLayout
            android:id="@+id/contentSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/item_margin">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatarImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/item_margin"
                android:src="@drawable/add_photo" />

            <TextView
                android:id="@+id/tvDisplayName"
                style="@style/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/avatarImage"
                android:text="@string/display_name" />

            <EditText
                android:id="@+id/edtDisplayName"
                style="@style/EditTextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDisplayName"
                android:layout_marginTop="@dimen/item_margin"
                android:background="@drawable/bg_text_input"
                android:hint="@string/hint_name"
                android:lines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvTutorial"
                style="@style/TextViewNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtDisplayName"
                android:layout_marginBottom="@dimen/fab_margin_large"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/explain_background"
                android:textColor="@color/textColorNormalSecondary" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
