<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:theme="@style/PrimaryActivity.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/item_margin">


                <TextView
                    android:id="@+id/tvHeader"
                    style="@style/TextViewHeaderWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/set_a_time" />

                <TextView
                    android:id="@+id/imvLeft"
                    style="@style/TextViewMenu"
                    android:layout_centerVertical="true"
                    android:text="@string/cancel" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout"
        android:background="#ebf4f3"
        android:orientation="vertical">

        <TimePicker
            android:id="@+id/timePicker"
            style="@style/TimePickerStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/btnDone"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            android:text="@string/done"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout"
        android:visibility="gone">

        <include layout="@layout/notification_layout" />
    </LinearLayout>

</RelativeLayout>